--- a/axeKnight.html
+++ b/axeKnight.html
@@ -62,7 +62,7 @@ console.log(event.keyCode)
   }
  
  //ANIMATION
- 
+ console.log(player.jumping)
  animation = function() {
   if (player.jumping = false && controller.up) {
    player.y_velocity -=20;
