--- a/axeKnight.html
+++ b/axeKnight.html
@@ -61,10 +61,11 @@ controller = {
   }
  
  //ANIMATION
- console.log(player.jumping)
+
  animation = function() {
   if (player.jumping = false && controller.up) {
    player.y_velocity -= 20;
+   console.log (player.y_velocity)
    player.jumping = true; 
   }
  
