--- a/axeKnight.html
+++ b/axeKnight.html
@@ -63,7 +63,7 @@ controller = {
  //ANIMATION
 
  animation = function() {
-  if (player.jumping = false && controller.up) {
+  if (player.jumping === false && controller.up) {
    player.y_velocity -= 20;
    console.log (player.y_velocity)
    player.jumping = true; 
