--- a/axeKnight.html
+++ b/axeKnight.html
@@ -47,7 +47,7 @@ controller = {
   
   var key_state = (event.type == 'keydown')?true:false;
  
-  if (event.keyCode === 90 && player.jumping === false;) {
+  if (event.keyCode === 90 && player.jumping === false) {
    player.y_velocity -= 20;
    player.jumping = true; }
 
