--- a/axeKnight.html
+++ b/axeKnight.html
@@ -50,7 +50,7 @@ controller = {
   if (event.keyCode === 90 && player.jumping === false) {
    player.y_velocity -= 20;
    player.jumping = true; }
-
+break;
 
   switch(event.keyCode) {
    case 37: controller.left = key_state;
