--- a/axeKnight.html
+++ b/axeKnight.html
@@ -47,18 +47,13 @@ controller = {
   
   var key_state = (event.type == 'keydown')?true:false;
  
-  if (event.keyCode === 90 && player.jumping === false) {
-   player.y_velocity -= 20;
-   player.jumping = true; }
-break;
-
   switch(event.keyCode) {
    case 37: controller.left = key_state;
     break;
    case 39: controller.right = key_state;
     break;
-  /* case 90: controller.up = key_state;
-    break; */
+   case 90: controller.up = key_state;
+    break; 
   } 
   }  
   }
@@ -66,10 +61,10 @@ break;
  //ANIMATION
 
  animation = function() {
- /* if (player.jumping === false && controller.up) {
+  if (player.jumping === false && controller.up) {
    player.y_velocity -= 40;
    player.jumping = true; 
-  }*/
+  }
  
  if (controller.left) {
  player.x_velocity -= 0.5;
