--- a/axeKnight.html
+++ b/axeKnight.html
@@ -47,7 +47,7 @@ controller = {
  right: false, 
  attack: false,
  dash: false,
- heal: false;
+ heal: false,
  keyListener: function(event) {
   
   var key_state = (event.type == 'keydown')?true:false;
