--- a/axeKnight.html
+++ b/axeKnight.html
@@ -72,7 +72,7 @@ controller = {
 
  animation = function() {
   if (player.jumping === false && controller.up) {
-   player.y_velocity -= 70;
+   for (controller.up === flase, player.y_velocity < 70, player.y_velocity +=10);
    player.jumping = true; 
   }
  
