--- a/axeKnight.html
+++ b/axeKnight.html
@@ -86,11 +86,11 @@ controller = {
  
    
  if (player.x >= 1300){
-  player.x_velocity -= 1.2;
+  console.log("right")
   }
   
     if (player.x <= 5){
-player.y_velocity += 1.2;
+console.log("left")
   }
  
 player.y_velocity += 5;
