--- a/axeKnight.html
+++ b/axeKnight.html
@@ -66,7 +66,7 @@ controller = {
     break; 
    case 88: controller.attack = key_state;
     break;
-   case 67: conroller.dash = key_state;
+   case 67: controller.dash = key_state;
     break;
    case 65: controller.heal = key_state;
   } 
