--- a/axeKnight.html
+++ b/axeKnight.html
@@ -82,14 +82,14 @@ controller = {
   if (player.face === 'right') 
   {
    player.dash = true;
-   player.x_velocity += 5;
+   player.x += 5;
  player.dash = false;
   }
    
    if (player.face === 'left')
    {
     player.dash = true;
-   player.x_velocity -= 5;
+   player.x -= 5;
  player.dash = false;
    }
   }
