--- a/axeKnight.html
+++ b/axeKnight.html
@@ -83,7 +83,7 @@ controller = {
   {
    player.dash = true;
    player.x_velocity += 30;
-   setTimeout(waitDashRight, 2000) 
+   setTimeout(waitDashRight, 750) 
    function waitDashRight() {
  player.dash = false;
   }}
@@ -91,8 +91,8 @@ controller = {
    if (player.face === 'left')
    {
     player.dash = true;
-   player.x -= 150;
-    setTimeout(waitDashLeft, 2000)
+   player.x_velocity -= 30;
+    setTimeout(waitDashLeft, 750)
     function waitDashLeft() {
  player.dash = false;
    }}
