--- a/axeKnight.html
+++ b/axeKnight.html
@@ -30,9 +30,9 @@
  function spawnEnemy () {
 var locationNumber = Math.floor(Math.random()*2)
 if (locationNumber === 1){
-spawnLocation = 20
+var spawnLocation = 20
 } else {
- location = 1300 }}
+ var spawnLocation = 1300 }}
  
  var enemy_height = 100;
  var enemy_width = 100;
