--- a/axeKnight.html
+++ b/axeKnight.html
@@ -50,7 +50,7 @@ var enemySpawnNumber = Math.floor(Math.random()*2)
    height: enemy_height,
    width: enemy_width,
    draw: function() {
-   c.drawImage(player_image, this.x, this.y, this.width, this.height)
+   c.drawImage(enemy_image, this.x, this.y, this.width, this.height)
   }}
  
   //PLAYER
