--- a/axeKnight.html
+++ b/axeKnight.html
@@ -179,8 +179,7 @@ if (player.y > 775 - 20 - 100) {
   
   if(player.x > enemy.x){
    enemy.x_velocity += 0.3
-  }
-  if(player.x < enemy.x){
+  }else{
    enemy.x_velocity -= 0.3
   }
   
