--- a/axeKnight.html
+++ b/axeKnight.html
@@ -25,17 +25,16 @@
  player.x = 1300;
  }
  
+ function enemyStopLeft() {
+  enemy.x = 20;
+ }
+ function enemyStopRight() {
+ enemy.x = 1300;
+ }
+ 
  //AVATARS SET UP
  
 //ENEMY
- /*var spawnLocation = function spawnEnemy() {
-var enemySpawnNumber = Math.floor(Math.random()*2)
- if ( enemySpawnNumber === 1){
- return 20;
- }else{
- return 1300;
- }
- }*/
  
  var enemy_height = 100;
  var enemy_width = 100;
