--- a/axeKnight.html
+++ b/axeKnight.html
@@ -28,8 +28,9 @@
  enemy_image.src = 'https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/225px-Solid_blue.svg.png';
  
   var enemy = {
+   gravity: true,
    x: 20,
-   y: innerHeight - (enemy_height + 10),
+   y: innerHeight - (775 - 20 - 100),
    damage: 10,
    health: 30,
    x_velocity: 0,
