--- a/axeKnight.html
+++ b/axeKnight.html
@@ -195,9 +195,10 @@ enemy.y_velocity *= 0.9;
   
   if (player.x === enemy.x) {
    player.health -= 10;
+   
   }
-  
-  document.write(player.health)
+ document.getElementById('playerHealth') = (player.health) 
+ <h3 id = 'playerHealth'></h3>
   
  c.clearRect(0,0, canvas.width, canvas.height);
  player.draw();
@@ -205,7 +206,8 @@ enemy.y_velocity *= 0.9;
   
   window.requestAnimationFrame(animation);
  }
-
+  
+ 
 
  
  
