--- a/axeKnight.html
+++ b/axeKnight.html
@@ -197,7 +197,7 @@ enemy.y_velocity *= 0.9;
    player.health -= 10;
    
   }
- document.getElementById('playerHealth') = (player.health) 
+ c.getElementById('playerHealth') = (player.health) 
  <h3 id = 'playerHealth'></h3>
   
  c.clearRect(0,0, canvas.width, canvas.height);
