--- a/axeKnight.html
+++ b/axeKnight.html
@@ -197,8 +197,8 @@ enemy.y_velocity *= 0.9;
    player.health -= 10;
    
   }
- c.getElementById('playerHealth') = (player.health) 
- <h3 id = 'playerHealth'></h3>
+ /*c.getElementById('playerHealth') = (player.health) 
+ <h3 id = 'playerHealth'></h3>*/
   
  c.clearRect(0,0, canvas.width, canvas.height);
  player.draw();
