--- a/axeKnight.html
+++ b/axeKnight.html
@@ -195,7 +195,8 @@ enemy.y_velocity *= 0.9;
   
   if (player.x === enemy.x) {
    player.health -= 10;
-   player.x_velocity -=5;
+   player.x_velocity -= 5;
+   console.log(player.health)
   }
    
    
