--- a/axeKnight.html
+++ b/axeKnight.html
@@ -193,6 +193,11 @@ enemy.y_velocity *= 0.9;
   
   //COLLISION DETECTION
   
+  console.log(player.x)
+  console.log(enemy.x)
+  
+  
+  
   if (player.x === enemy.x) {
    player.health -= 10;
    player.x_velocity -= 5;
