--- a/axeKnight.html
+++ b/axeKnight.html
@@ -195,7 +195,7 @@ enemy.y_velocity *= 0.9;
   
   //COLLISION DETECTION
   
-  
+  console.log(enemy.x_end)
   
 if (enemy.x_end === player.x){
  player.health -= enemy.damge;
