--- a/axeKnight.html
+++ b/axeKnight.html
@@ -196,6 +196,7 @@ enemy.y_velocity *= 0.9;
   //COLLISION DETECTION
   
   console.log(enemy.x_end)
+  console.log(enemy.x)
   
 if (enemy.x_end === player.x){
  player.health -= enemy.damge;
