--- a/axeKnight.html
+++ b/axeKnight.html
@@ -204,7 +204,7 @@ enemy.y_velocity *= 0.9;
   //COLLISION DETECTION
   
   
-  if (end.enemy === 50) {
+  if (end.enemy === enemy.x + 50) {
    console.log("end.enemy = 50")
   }
   
