--- a/axeKnight.html
+++ b/axeKnight.html
@@ -104,7 +104,7 @@ controller = {
  animation = function() {
   
  if (controller.attack && player.face === 'right') {
-  c.drawImage(slash_image, player.x + 120, 50, 50, 100)
+  c.drawImage(slash_image, player.x + 120, player.y, 50, 100)
  }
   
   
