--- a/axeKnight.html
+++ b/axeKnight.html
@@ -208,7 +208,7 @@ enemy.y_velocity *= 0.9;
   if (player.x < enemy.x + enemy.width &&
    player.x + player.width > enemy.x &&
    player.y < enemy.y + enemy.height &&
-   player.y + player.height > emeny.y) {
+   player.y + player.height > enemy.y) {
     
    player.health -= enemy.damage;
    player.x_velocity += 5;
