--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <html>
        
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
-          <a href="./test.html">TEST AREA</a>
+          <br>
+          < href="./test.html">TEST AREA</a>
+          <br>
           <a href="./axeKnight.html">Axe Knight</a>
          
         <link href="style.css" type="text/css" rel="stylesheet">
