--- a/axeKnight.html
+++ b/axeKnight.html
@@ -210,9 +210,10 @@ enemy.y_velocity *= 0.9;
    player.y < enemy.y + enemy.height &&
    player.y + player.height > enemy.y) {
     
-   player.health -= enemy.damage;
    player.x_velocity += 5;
    player.y_velocity -= 5
+   setTimeOut(takeDamage, 100)
+   function take Damage() {player.health -= enemy.damage;}
 }
   
    
