--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
           <br>
-          < href="./test.html">TEST AREA</a>
+          <a href="./test.html">TEST AREA</a>
           <br>
           <a href="./axeKnight.html">Axe Knight</a>
          
