--- a/axeKnight.html
+++ b/axeKnight.html
@@ -211,9 +211,10 @@ enemy.y_velocity *= 0.9;
    player.y + player.height > enemy.y) {
     
    player.x_velocity += 5;
-   player.y_velocity -= 5
+   player.y_velocity -= 5;
    setTimeOut(takeDamage, 100)
-   function takeDamage() {player.health -= enemy.damage;}
+   function takeDamage() {player.health -= enemy.damage; 
+                          console.log(player.health)}
 }
   
    
