--- a/axeKnight.html
+++ b/axeKnight.html
@@ -200,7 +200,7 @@ if (player.y > 775 - 20 - 100) {
    enemy.x += 2; 
   }
   
-  if (enemy.y > 775 - 20 - 50) {
+  if (enemy.y < 775 - 20 - 50) {
    enemy.y_velocity = 0;
   }
   
