--- a/axeKnight.html
+++ b/axeKnight.html
@@ -210,7 +210,7 @@ enemy.y_velocity *= 0.9;
   }
   
 enemy.x += enemy.x_velocity;
-enemy.y += enemy.y_velocity;
+//enemy.y += enemy.y_velocity;
   
   
   //COLLISION DETECTION
