--- a/axeKnight.html
+++ b/axeKnight.html
@@ -10,6 +10,7 @@
 <script>
  
  //SET UP
+ var pause = false;
  var animation, controller;
  var canvas = document.getElementById('canvas')
  var c = canvas.getContext('2d');
@@ -98,6 +99,8 @@ controller = {
    case 67: controller.dash = key_state;
     break;
    case 65: controller.heal = key_state;
+    break;
+   case 27: controller.esc = key_state; 
   } 
   }  
   }
@@ -105,6 +108,8 @@ controller = {
  //PLAYER ANIMATION
 
  animation = function() {
+  
+  if (pause === false) {
   
  if (controller.attack && player.face === 'right') {
   c.drawImage(slash_image, player.x + 120, player.y, 50, 100)
@@ -242,10 +247,10 @@ enemy.x += enemy.x_velocity;
    if (enemy.face === 'left'){
    enemy.x_velocity += 40;
    enemy.y_velocity -= 40;
-    if (player.right === true) {
+    if (contorller.right === true) {
      player.x_velocity -= 50;
      player.y_velocity -= 50;
-    } if (player.right === false) {
+    } if (controller.right === false) {
    player.x_velocity -= 20;
    player.y_velocity -= 20;
     }
@@ -271,16 +276,22 @@ enemy.x += enemy.x_velocity;
    
    
  
- 
+ //DIFFERENT SCREENS
+  
+  if (controller.esc){
+   pause = true;
+  }
   
  c.clearRect(0,0, canvas.width, canvas.height);
  player.draw();
  enemy.draw();
   
+  
+ 
   window.requestAnimationFrame(animation);
  }
   
- 
+ }
 
  
  
