--- a/axeKnight.html
+++ b/axeKnight.html
@@ -279,7 +279,11 @@ enemy.x += enemy.x_velocity;
  //DIFFERENT SCREENS
   
   if (controller.esc){
+   if (pause === false){
    pause = true;
+   }else{
+    pause = false;
+   }
   }
   
  c.clearRect(0,0, canvas.width, canvas.height);
