--- a/axeKnight.html
+++ b/axeKnight.html
@@ -247,7 +247,7 @@ enemy.x += enemy.x_velocity;
    if (enemy.face === 'left'){
    enemy.x_velocity += 40;
    enemy.y_velocity -= 40;
-    if (contorller.right === true) {
+    if (controller.right === true) {
      player.x_velocity -= 50;
      player.y_velocity -= 50;
     } if (controller.right === false) {
