--- a/axeKnight.html
+++ b/axeKnight.html
@@ -278,11 +278,11 @@ enemy.x += enemy.x_velocity;
   
    
    if (player.health === 0) {
-    setTimeout(deadTimer, 1000)
-    function deadTimer(){
+    
     window.alert('YOU DIED')
+    player.health ++ 
     location.reload();
-   }}
+   }
    
   
   
