--- a/axeKnight.html
+++ b/axeKnight.html
@@ -19,7 +19,6 @@
  canvas.width = innerWidth;
  canvas.height = innerHeight;
  
- 
  //AVATARS SET UP
  
 //ENEMY
@@ -35,7 +34,7 @@
    x: 25,
    y: 775 - 20 - 50,
    damage: 10,
-   health: 30,
+   health: new component("30px", "Consolas", "black", 280, 40, "text"),
    x_velocity: 0,
    y_velocity: 0,
    height: enemy_height,
