--- a/axeKnight.html
+++ b/axeKnight.html
@@ -18,7 +18,7 @@
  var innerHeight = 775; 
  canvas.width = innerWidth;
  canvas.height = innerHeight;
- var playerHealth = new component("30px", "Consolas", "white", 280, 40, "text");
+ var playerHealth;
  //AVATARS SET UP
  
 //ENEMY
@@ -107,6 +107,8 @@ controller = {
  //PLAYER ANIMATION
 
  animation = function() {
+  
+  playerHealth = new component("30px", "Consolas", "white", 280, 40, "text");
   
    //DIFFERENT SCREENS
   
