--- a/axeKnight.html
+++ b/axeKnight.html
@@ -33,7 +33,7 @@
    x: 25,
    y: 775 - 20 - 50,
    damage: 10,
-   health: playerHealth,
+   health: 100,
    x_velocity: 0,
    y_velocity: 0,
    height: enemy_height,
