--- a/axeKnight.html
+++ b/axeKnight.html
@@ -225,6 +225,15 @@ enemy.y_velocity *= 0.9;
   
 enemy.x += enemy.x_velocity;
 //enemy.y += enemy.y_velocity;
+   
+   
+   //HEATH, MONEY, AND ALL ONSCREEN TEXT
+    
+   function drawHealth() {
+    c.font = "18px Arial"
+    c.fillStyle = "ffffff"
+    c.fillText("Health: " + player.health, 25, 25)
+   }
   
   
   //COLLISION DETECTION
@@ -290,6 +299,7 @@ enemy.x += enemy.x_velocity;
  c.clearRect(0,0, canvas.width, canvas.height);
  player.draw();
  enemy.draw();
+ drawHealth();  
   
   
  
