--- a/axeKnight.html
+++ b/axeKnight.html
@@ -18,6 +18,8 @@
  var innerHeight = 775; 
  canvas.width = innerWidth;
  canvas.height = innerHeight;
+ var hideHealth = false;
+ 
  //AVATARS SET UP
  
 //ENEMY
@@ -230,11 +232,12 @@ enemy.x += enemy.x_velocity;
    //HEATH, MONEY, AND ALL ONSCREEN TEXT
     
    function drawHealth() {
+    if (hideHealth === false){
     c.font = "18px Arial"
     c.fillStyle = "ffffff"
     c.fillText("Health: " + player.health, 25, 25)
    }
-  
+   }
   
   //COLLISION DETECTION
   
@@ -288,8 +291,10 @@ enemy.x += enemy.x_velocity;
    if (player.health === 0) {
     
     window.alert('YOU DIED')
+    hideHealth = true;
     player.health ++ 
     location.reload();
+    hideHealth = false;
    }
    
   
