--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <body>
         <html>
        
-  <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
+  <a href="./rockpapersissors.html">Play Rock Paper Scissors!</a>
           <br>
           <a href="./test.html">TEST AREA</a>
           <br>
