--- a/axeKnight.html
+++ b/axeKnight.html
@@ -275,10 +275,10 @@ enemy.x += enemy.x_velocity;
    //ATTACK ANIMATION
    
    if (controller.attack){
-    if(player.face === 'right'){
+    if (player.face === 'right'){
     attackRight.draw();
     }
-    if player.face === 'left'){
+    if (player.face === 'left'){
      attackLeft.draw();
     }
    }
