--- a/axeKnight.html
+++ b/axeKnight.html
@@ -82,7 +82,7 @@ var attack_height = 20;
 var attack_image = new Image();
 attack_image.src = 'https://images-na.ssl-images-amazon.com/images/I/41sc29FSaEL._UX385_.jpg' 
  
- var x_attackRight = player.x + player.width + attack.width;
+ var x_attackRight = player.x + player.width + attack_width;
  var y_attackRight = player.y + (player.height / 2)
  
  var attackRight = {
