--- a/test.html
+++ b/test.html
@@ -1,5 +1,14 @@
 
+<html>
 <a href="./index.html">Homepage</a>
-<script>
+<button onclick='addOne()'>ADD ONE</button>
+</html>
+  <script>
+    var value
+  function addone()
+    {
+      value++
+      console.log(value)
+    }
   console.log('How does this work?')
   </script>
