--- a/test.html
+++ b/test.html
@@ -1,7 +1,6 @@
 
 <html>
 <a href="./index.html">Homepage</a>
-<button onclick='addOne()'>ADD ONE</button>
 </html>
   <script>
     var value
@@ -12,3 +11,6 @@
     }
   console.log('How does this work?')
   </script>
+<html>
+  <button onclick='addOne()'>ADD ONE</button>
+</html>
