--- a/axeKnight.html
+++ b/axeKnight.html
@@ -222,7 +222,7 @@ player.y_velocity *= 0.9;
   
 if (player.y > 775 - 20 - player.height/2) {
   player.jumping = false;
-  player.y = 775 - 20 - 100; 
+  player.y = 775 - 20 - player.height/2; 
   player.y_velocity = 0; 
 }
 
